[package]
name = "postgres_gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "postgres_gateway"
crate-type = ["cdylib"]

[dependencies]
postgres-types = "0.2.1"
serde_json = "1.0.68"
pyo3-log = "0.4.0"
log = "0.4.14"
syn = "1.0.77"
deadpool-postgres = "0.9.0"
futures = "0.3.17"
byteorder = "1.4.3"
once_cell = "1.8.0"

[dependencies.pyo3-asyncio]
version = "0.14.0"
features = ["tokio-runtime"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module", "serde"]

[dependencies.tokio-postgres]
version = "0.7.5"
features = ["with-serde_json-1"]

[dependencies.tokio]
version = "1.12.0"
features = ["full"]
